# hmkit-oem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  deploy.gradle  deploy.settings  local.properties  settings.gradle
TestApp/: build.gradle
TestApp/src/main/java/: Main.java
TestApp/src/main/kotlin/: Main.kt
asd/src/main/java/com/highmobility/btcore/: HMBTCore.java  HMBTCoreInterface.java  HMDevice.java
asd/src/main/java/com/highmobility/hmkit/: CryptoException.java  Telematics.java  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
hmkit-oem/: build.gradle  deploy.gradle  deploy.settings  settings.gradle
hmkit-oem/src/main/jni/: Makefile  Makefile-osx
hmkit-oem/src/test/java/: Tests.java
jni/: hm_bt_crypto_hal.c  hm_config.h
lib/: libhmbtcore.jnilib
src/com/highmobility/: CoreCallback.java  Main.java
src/main/java/: Test.java
src/main/java/com/highmobility/: CoreCallback.java  Main.java  NativeUtils.java
src/main/java/com/highmobility/btcore/: HMBTCore.java  HMBTCoreInterface.java  NativeUtils.java
src/main/java/com/highmobility/core/: Core.java  CryptoException.java
src/main/java/com/highmobility/crypto/: AccessCertificate.java  Certificate.java  Crypto.java  DeviceCertificate.java  KeyPair.java
src/main/java/com/highmobility/hmkit/: CryptoException.java  HMBTCoreInterfaceImpl.java  HMKit.java  Telematics.java
src/main/jni/: Makefile  hm_api_callback.c  hm_bt_crypto_hal.c  hm_bt_debug_hal.c  hm_bt_persistence_hal.c  hm_config.h  hm_connectivity_hal.c
src/main/kotlin/: HMServer.kt
src/test/java/: TestSignatures.java
(+5 files in other folders)
